# a2aDemo

./: README.md  client_demo.py  main.py  pyproject.toml  requirements.txt  ui.py
.kiro/hooks/: update-readme-on-code-change.kiro.hook
a2a/: agent_card.py  runner.py  server.py  tracer.py
agents/orchestrator/: agent.py
agents/stock/: agent.py  stock_tool.py
agents/weather/: agent.py  weather_tool.py
agents/weather/.adk/: session.db
clientAgent/: agent_card.py  discovery.py  runner.py  server.py  tracer.py
remoteAgents/orchestrator/: agent.py
remoteAgents/stock/: agent.py  agent_executor.py  server.py
remoteAgents/weather/: agent.py  agent_executor.py  server.py  weather_tool.py
