[project]
name = "a2ademo"
version = "1.0.0"
description = "A2A (Agent-to-Agent) protocol demo using Google ADK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn>=0.34.0",
    "a2a-sdk",
    "litellm>=1.55.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.3",
    "httpx>=0.27.0",
    "streamlit>=1.40.0",
]
